@@ -61,8 +61,9 @@ SkeletonBatch::SkeletonBatch () {
 
     auto program = backend::Program::getBuiltinProgram(backend::ProgramType::POSITION_TEXTURE_COLOR);
 	_programState = new backend::ProgramState(program); // new default program state
+	updateProgramStateLayout(_programState);
     for (unsigned int i = 0; i < INITIAL_SIZE; i++) {
-        _commandsPool.push_back(newCommand());
+        _commandsPool.push_back(createNewTrianglesCommand());
     }
     reset();
     // callback after drawing is finished so we can clear out the batch state
@@ -80,30 +81,25 @@ SkeletonBatch::~SkeletonBatch () {
 		delete _commandsPool[i];
 		_commandsPool[i] = nullptr;
 	}
+
 	CC_SAFE_RELEASE(_programState);
 }
 
-backend::ProgramState* SkeletonBatch::updateCommandPipelinePS(SkeletonCommand* command, backend::ProgramState* programState)
+void SkeletonBatch::updateProgramStateLayout(cocos2d::backend::ProgramState* programState)
 {
-	auto& currentState = command->getPipelineDescriptor().programState;
-	if(currentState == nullptr || currentState->getProgram() != programState->getProgram()) {
-		CC_SAFE_RELEASE(currentState);
-		currentState = programState->clone();
-		
-		auto vertexLayout = currentState->getVertexLayout();
-		auto locPosition = currentState->getAttributeLocation("a_position");
-		auto locTexcoord = currentState->getAttributeLocation("a_texCoord");
-		auto locColor = currentState->getAttributeLocation("a_color");
-		vertexLayout->setAttribute("a_position", locPosition, backend::VertexFormat::FLOAT3, offsetof(V3F_C4B_T2F, vertices), false);
-		vertexLayout->setAttribute("a_color", locColor, backend::VertexFormat::UBYTE4, offsetof(V3F_C4B_T2F, colors), true);
-		vertexLayout->setAttribute("a_texCoord", locTexcoord, backend::VertexFormat::FLOAT2, offsetof(V3F_C4B_T2F, texCoords), false);
-		vertexLayout->setLayout(sizeof(_vertices[0]));
+	auto vertexLayout = programState->getVertexLayout();
+
+	auto locPosition = programState->getAttributeLocation("a_position");
+	auto locTexcoord = programState->getAttributeLocation("a_texCoord");
+	auto locColor = programState->getAttributeLocation("a_color");
+	vertexLayout->setAttribute("a_position", locPosition, backend::VertexFormat::FLOAT3, offsetof(V3F_C4B_T2F, vertices), false);
+	vertexLayout->setAttribute("a_color", locColor, backend::VertexFormat::UBYTE4, offsetof(V3F_C4B_T2F, colors), true);
+	vertexLayout->setAttribute("a_texCoord", locTexcoord, backend::VertexFormat::FLOAT2, offsetof(V3F_C4B_T2F, texCoords), false);
+	vertexLayout->setLayout(sizeof(_vertices[0]));
 
 
-		command->_locMVP = currentState->getUniformLocation("u_MVPMatrix");
-		command->_locTexture = currentState->getUniformLocation("u_texture");
-	}
-	return currentState;
+	_locMVP = programState->getUniformLocation("u_MVPMatrix");
+	_locTexture = programState->getUniformLocation("u_texture");
 }
 
 void SkeletonBatch::update (float delta) {
@@ -116,8 +112,8 @@ cocos2d::V3F_C4B_T2F* SkeletonBatch::allocateVertices(uint32_t numVertices) {
 		_vertices.resize((_vertices.size() + numVertices) * 2 + 1);
 		cocos2d::V3F_C4B_T2F* newData = _vertices.data();
 		for (uint32_t i = 0; i < this->_nextFreeCommand; i++) {
-			SkeletonCommand* command = _commandsPool[i];
-			SkeletonCommand::Triangles& triangles = (SkeletonCommand::Triangles&)command->getTriangles();
+			TrianglesCommand* command = _commandsPool[i];
+			cocos2d::TrianglesCommand::Triangles& triangles = (cocos2d::TrianglesCommand::Triangles&)command->getTriangles();
 			triangles.verts = newData + (triangles.verts - oldData);
 		}
 	}
@@ -139,8 +135,8 @@ unsigned short* SkeletonBatch::allocateIndices(uint32_t numIndices) {
 		_indices.ensureCapacity(_indices.size() + numIndices);
 		unsigned short* newData = _indices.buffer();
 		for (uint32_t i = 0; i < this->_nextFreeCommand; i++) {
-			SkeletonCommand* command = _commandsPool[i];
-			SkeletonCommand::Triangles& triangles = (SkeletonCommand::Triangles&)command->getTriangles();
+			TrianglesCommand* command = _commandsPool[i];
+			cocos2d::TrianglesCommand::Triangles& triangles = (cocos2d::TrianglesCommand::Triangles&)command->getTriangles();
 			if (triangles.indices >= oldData && triangles.indices < oldData + oldSize) {
 				triangles.indices = newData + (triangles.indices - oldData);
 			}
@@ -158,7 +154,7 @@ void SkeletonBatch::deallocateIndices(uint32_t numIndices) {
 
 
 cocos2d::TrianglesCommand* SkeletonBatch::addCommand(cocos2d::Renderer* renderer, float globalOrder, cocos2d::Texture2D* texture, backend::ProgramState* programState, cocos2d::BlendFunc blendType, const cocos2d::TrianglesCommand::Triangles& triangles, const cocos2d::Mat4& mv, uint32_t flags) {
-	SkeletonCommand* command = nextFreeCommand();
+	TrianglesCommand* command = nextFreeCommand();
     const cocos2d::Mat4& projectionMat = Director::getInstance()->getMatrix(MATRIX_STACK_TYPE::MATRIX_STACK_PROJECTION);    
 
 	if (programState == nullptr)
@@ -166,10 +162,17 @@ cocos2d::TrianglesCommand* SkeletonBatch::addCommand(cocos2d::Renderer* renderer
 
 	CCASSERT(programState, "programState should not be null");
 
-	auto pipelinePS = updateCommandPipelinePS(command, programState);
+	auto& pipelinePS = command->getPipelineDescriptor().programState;
+	if (pipelinePS == nullptr || pipelinePS->getProgram() != programState->getProgram()) 
+	{
+		CC_SAFE_RELEASE(pipelinePS);
+		pipelinePS = programState->clone();
+
+		updateProgramStateLayout(pipelinePS);
+	}
 	
-	pipelinePS->setUniform(command->_locMVP, projectionMat.m, sizeof(projectionMat.m));
-	pipelinePS->setTexture(command->_locTexture, 0, texture->getBackendTexture());
+	pipelinePS->setUniform(_locMVP, projectionMat.m, sizeof(projectionMat.m));
+	pipelinePS->setTexture(_locTexture, 0, texture->getBackendTexture());
 
 	command->init(globalOrder, texture, blendType, triangles, mv, flags);
 	renderer->addCommand(command);
@@ -182,19 +185,19 @@ void SkeletonBatch::reset() {
 	_indices.setSize(0, 0);
 }
 
-SkeletonCommand* SkeletonBatch::nextFreeCommand() {
+cocos2d::TrianglesCommand* SkeletonBatch::nextFreeCommand() {
     if (_commandsPool.size() <= _nextFreeCommand) {
         unsigned int newSize = _commandsPool.size() * 2 + 1;
         for (int i = _commandsPool.size(); i < newSize; i++) {
-            _commandsPool.push_back(newCommand());
+            _commandsPool.push_back(createNewTrianglesCommand());
         }
     }
     auto* command = _commandsPool[_nextFreeCommand++];
     return command;
 }
 
-SkeletonCommand* SkeletonBatch::newCommand() {
-    auto* command = new SkeletonCommand();
+cocos2d::TrianglesCommand *SkeletonBatch::createNewTrianglesCommand() {
+    auto* command = new TrianglesCommand();
     return command;
 }
 }
